seat-sleuth-server/k8s/deployment.yaml
# Database StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seat-sleuth-db
  labels:
    app: seat-sleuth-db
spec:
  selector:
    matchLabels:
      app: seat-sleuth-db
  serviceName: seat-sleuth-db
  replicas: 1
  template:
    metadata:
      labels:
        app: seat-sleuth-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10

# Database Service
---
apiVersion: v1
kind: Service
metadata:
  name: seat-sleuth-db
spec:
  selector:
    app: seat-sleuth-db
  ports:
    - port: 5432
      targetPort: 5432

# App Secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seat-sleuth
  labels:
    app: seat-sleuth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seat-sleuth
  template:
    metadata:
      labels:
        app: seat-sleuth
    spec:
      containers:
        - name: seat-sleuth
          image: seat-sleuth-server:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10

# App Service
---
apiVersion: v1
kind: Service
metadata:
  name: seat-sleuth
spec:
  type: ClusterIP
  selector:
    app: seat-sleuth
  ports:
    - port: 4000
      targetPort: 4000

# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seat-sleuth-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seat-sleuth
                port:
                  number: 4000
